# GameCrashAgent

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  config.json  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
docs/: CODEX_FOR_OSS_APPLICATION.md  LAUNCH_PLAN.md
examples/: sample_report.md
gamecrashagent/: __init__.py  cli.py  collectors.py  common.py  privacy.py  reporting.py  risk.py
scripts/: package.ps1  run.ps1
tests/: test_cli.py  test_privacy.py  test_reporting.py  test_risk.py
